# ITA-Mestrado

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  README.pt-BR.md  pyproject.toml  requirements-legacy.txt
.github/workflows/: ci.yml
Artigos_Relevantes/12_Testes_MCAR_Little_Jamshidian/: REFERENCIA_Jamshidian_Jalal_2010.txt  REFERENCIA_Little_1988_MCAR_Test.txt
Artigos_Relevantes/15_MAR_vs_MNAR_Distincao/: README_artigos.md
IC - ITA 2/: .gitignore  ANALISE_RESULTADOS_REAIS.md  HISTORICO.md  RESULTADOS_FASE1_FASE2.md  RESULTADOS_FASE3.md
IC - ITA 2/Dataset copy/MAR/: MAR_seed10000_mr10.txt  MAR_seed10001_mr8.txt  MAR_seed10002_mr10.txt  MAR_seed10003_mr7.txt  MAR_seed10004_mr5.txt  MAR_seed10005_mr1.txt  MAR_seed10006_mr9.txt  MAR_seed10007_mr7.txt  MAR_seed10008_mr4.txt  MAR_seed10009_mr4.txt  MAR_seed10010_mr2.txt  MAR_seed10011_mr9.txt  MAR_seed10012_mr2.txt  MAR_seed10013_mr3.txt  MAR_seed10014_mr10.txt  MAR_seed10015_mr3.txt  MAR_seed10016_mr10.txt  MAR_seed10017_mr6.txt  MAR_seed10018_mr8.txt  MAR_seed10019_mr8.txt  MAR_seed10020_mr1.txt  MAR_seed10021_mr8.txt  MAR_seed10022_mr3.txt  MAR_seed10023_mr6.txt  MAR_seed10024_mr5.txt  MAR_seed10025_mr4.txt  MAR_seed10026_mr7.txt  MAR_seed10027_mr4.txt  MAR_seed10028_mr3.txt  MAR_seed10029_mr3.txt  MAR_seed10030_mr7.txt  MAR_seed10031_mr5.txt  MAR_seed10032_mr1.txt  MAR_seed10033_mr5.txt  MAR_seed10034_mr4.txt  MAR_seed10035_mr8.txt  MAR_seed10036_mr5.txt  MAR_seed10037_mr2.txt  MAR_seed10038_mr9.txt  MAR_seed10039_mr9.txt  (+535 more)
IC - ITA 2/Dataset copy/MCAR/: MCAR_seed10000_mr10.txt  MCAR_seed10001_mr8.txt  MCAR_seed10002_mr10.txt  MCAR_seed10003_mr7.txt  MCAR_seed10004_mr5.txt  MCAR_seed10005_mr1.txt  MCAR_seed10006_mr9.txt  MCAR_seed10007_mr7.txt  MCAR_seed10008_mr4.txt  MCAR_seed10009_mr4.txt  MCAR_seed10010_mr2.txt  MCAR_seed10011_mr9.txt  MCAR_seed10012_mr2.txt  MCAR_seed10013_mr3.txt  MCAR_seed10014_mr10.txt  MCAR_seed10015_mr3.txt  MCAR_seed10016_mr10.txt  MCAR_seed10017_mr6.txt  MCAR_seed10018_mr8.txt  MCAR_seed10019_mr8.txt  MCAR_seed10020_mr1.txt  MCAR_seed10021_mr8.txt  MCAR_seed10022_mr3.txt  MCAR_seed10023_mr6.txt  MCAR_seed10024_mr5.txt  MCAR_seed10025_mr4.txt  MCAR_seed10026_mr7.txt  MCAR_seed10027_mr4.txt  MCAR_seed10028_mr3.txt  MCAR_seed10029_mr3.txt  MCAR_seed10030_mr7.txt  MCAR_seed10031_mr5.txt  MCAR_seed10032_mr1.txt  MCAR_seed10033_mr5.txt  MCAR_seed10034_mr4.txt  MCAR_seed10035_mr8.txt  MCAR_seed10036_mr5.txt  MCAR_seed10037_mr2.txt  MCAR_seed10038_mr9.txt  MCAR_seed10039_mr9.txt  (+540 more)
IC - ITA 2/Dataset copy/MNAR/: MNAR_seed10000_mr10.txt  MNAR_seed10001_mr8.txt  MNAR_seed10002_mr10.txt  MNAR_seed10003_mr7.txt  MNAR_seed10004_mr5.txt  MNAR_seed10005_mr1.txt  MNAR_seed10006_mr9.txt  MNAR_seed10007_mr7.txt  MNAR_seed10008_mr4.txt  MNAR_seed10009_mr4.txt  MNAR_seed10010_mr2.txt  MNAR_seed10011_mr9.txt  MNAR_seed10012_mr2.txt  MNAR_seed10013_mr3.txt  MNAR_seed10014_mr10.txt  MNAR_seed10015_mr3.txt  MNAR_seed10016_mr10.txt  MNAR_seed10017_mr6.txt  MNAR_seed10018_mr8.txt  MNAR_seed10019_mr8.txt  MNAR_seed10020_mr1.txt  MNAR_seed10021_mr8.txt  MNAR_seed10022_mr3.txt  MNAR_seed10023_mr6.txt  MNAR_seed10024_mr5.txt  MNAR_seed10025_mr4.txt  MNAR_seed10026_mr7.txt  MNAR_seed10027_mr4.txt  MNAR_seed10028_mr3.txt  MNAR_seed10029_mr3.txt  MNAR_seed10030_mr7.txt  MNAR_seed10031_mr5.txt  MNAR_seed10032_mr1.txt  MNAR_seed10033_mr5.txt  MNAR_seed10034_mr4.txt  MNAR_seed10035_mr8.txt  MNAR_seed10036_mr5.txt  MNAR_seed10037_mr2.txt  (+525 more)
IC - ITA 2/Referencias/: Novo(a) Documento de Texto.txt
IC - ITA 2/Scripts/: README.md  expandir_dados_reais.py  gerador.py  preparar_dados_reais.py  requirements.txt
IC - ITA 2/analise/: 00_resumo_geral.md  02_extract_features.md  04_train_model.md  06_analyze_feature_relevance.md  07_run_all.md  08_problemas_cross_file.md
IC - ITA 2/plano/: PROPOSTA_MELHORIAS.md  STEP01_outputs_enriquecidos.md  STEP02_features_mechdetect_invariantes.md  STEP03_dados_missmecha_rotulos.md  STEP04_llm_caafe_embeddings.md
IC - ITA 2/plano_2/: STEP04B_ablacao_significancia.md  STEP05A_classificacao_hierarquica.md  STEP05B_logo_cv.md  STEP06_mechdetect_original.md  STEP07_pklm.md  STEP08_shap_error_analysis.md  VISAO_GERAL.md
data/: README.md  calibration.json  calibration_progress_sequential_backup.csv  calibration_progress_v2a.csv  calibration_progress_v2b.csv  calibration_scores.npz  calibration_scores_sequential_backup.npz  calibration_scores_smoke.npz  calibration_scores_v2a.npz  calibration_sequential_backup.json  calibration_smoke.json  calibration_v2a.json
data/real/: sources.md
data/smoke_test_v2b/: calibration.json  calibration_scores.npz
docs/: HISTORICO.md  README.md  bibliography.md  caafe_mnar.md  methodology.md  reproducibility.md
docs/code/: v2_improved_README.md
results/: README.md
src/missdetect/: __init__.py  ablation_study.py  analyze_feature_relevance.py  analyze_shap.py  calibrar_protocolo.py  classificar_mnar.py  clean_labels.py  compare_results.py  ensemble_model.py  extract_features.py  extract_original_stats.py  forensic_ablation.py  generate_thesis_figures.py  generate_thesis_outputs.py  merge_halves.py  run_all.py  train_hierarchical.py  train_hierarchical_v3plus.py  train_hierarchical_variants.py  train_model.py  validar_rotulos.py  validar_rotulos_v2.py
tests/: test_smoke.py  test_validar_rotulos_v2.py
(+5297 files in other folders)
