[project]
name = "missdetect"
version = "0.1.0"
description = "Hierarchical classification of missing-data mechanisms (MCAR / MAR / MNAR) with statistical and LLM-augmented features."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Jonathan Tsen", email = "jonathan@labrynth.ai" },
]
keywords = [
    "missing-data",
    "mcar",
    "mar",
    "mnar",
    "machine-learning",
    "llm",
    "feature-engineering",
    "hierarchical-classification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "statsmodels>=0.14",
    "shap>=0.44",
    "cleanlab>=2.6",
    "imbalanced-learn>=0.12",
    "mdatagen>=0.2",
    "missmecha-py>=0.1.2",
]

[project.optional-dependencies]
boosting = [
    "xgboost>=2.0",
    "catboost>=1.2",
    "optuna>=3.4",
]
llm = [
    "langchain>=0.1",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=0.0.5",
    "sentence-transformers>=2.5",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]
all = [
    "missdetect[boosting,llm,dev]",
]

[project.urls]
Homepage = "https://github.com/JonathanTsen/missdetect"
Repository = "https://github.com/JonathanTsen/missdetect"
Documentation = "https://github.com/JonathanTsen/missdetect/tree/main/docs"
Issues = "https://github.com/JonathanTsen/missdetect/issues"

[project.scripts]
missdetect-extract = "missdetect.extract_features:main"
missdetect-train = "missdetect.train_model:main"
missdetect-train-hier = "missdetect.train_hierarchical_v3plus:main"
missdetect-pipeline = "missdetect.run_all:main"

# =============================================================================
# Build system
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/missdetect"]

[tool.hatch.build.targets.sdist]
include = [
    "src/missdetect",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "pyproject.toml",
]

# =============================================================================
# Tooling: Ruff (lint + format)
# =============================================================================

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]
extend-exclude = [
    "results",
    "_local_references",
    "data",
    "docs/archive",
]

[tool.ruff.lint]
# Pragmatic rule set for research code: catch real bugs, allow expressive scripts.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # function call in default argument (common in sklearn-style code)
    "SIM108", # ternary collapse (often less readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]            # assert allowed in tests
"src/missdetect/data_generation/**" = ["T201"]  # prints OK in CLI scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Tooling: MyPy (type checking — non-strict for research code)
# =============================================================================

[tool.mypy]
python_version = "3.11"
files = ["src/missdetect"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
# Research-code pragmatism: not strict, but catches the common mistakes.
strict_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["mdatagen.*", "missmecha.*", "shap.*", "cleanlab.*", "catboost.*", "xgboost.*"]
ignore_missing_imports = true

# =============================================================================
# Tooling: pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that take more than ~5s",
    "llm: tests that hit a real LLM API (require credentials)",
]

[tool.coverage.run]
source = ["src/missdetect"]
omit = [
    "src/missdetect/data_generation/*",
    "src/missdetect/generate_thesis_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
